--- a/css/estilos.css
+++ b/css/estilos.css
@@ -217,7 +217,8 @@ span {
       align-items: center;
       background-color: #3E6E1D; }
     .wrapper main .creation section:nth-child(2) {
-      background: url(../img/imgAbout1.jpg) repeat fixed center; }
+      background: url(../img/imgAbout1.jpg) repeat fixed center;
+      background-size: contain; }
     .wrapper main .creation section:nth-child(3) {
       display: flex;
       flex-direction: column;
