cambiando estilos menu

--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -200,7 +200,7 @@ span {
         align-items: flex-end;
         padding: 0rem 1rem;
         margin: 0rem;
-        font-weight: bold;
+        font-weight: lighter;
         font-size: 1.5rem;
         background-color: $blanco;
         a {
