terminado validacion formularios ] imagenes nuevas ] responsivo

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,4 @@
-/* http://meyerweb.com/eric/tools/css/reset/ 
+    /* http://meyerweb.com/eric/tools/css/reset/ 
    v2.0 | 20110126
    License: none (public domain)
 */
@@ -146,68 +146,73 @@ span {
   font-weight: bold; }
 
 .menu div:first-child {
-  text-align: right;
+  text-align: center;
   padding: 0rem; }
   .menu div:first-child h1 {
-    padding: 0rem 1rem;
+    padding: 1rem;
     font-family: 'Pacifico', Courier New, Courier, monospace;
+    font-size: 2rem;
     color: #B9121B; }
 .menu .navbar {
   display: flex;
-  flex-direction: row;
-  justify-content: flex-start;
-  align-items: flex-end;
-  padding: 0rem 1rem;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: stretch;
+  padding: 0rem 0rem;
   margin: 0rem;
   font-weight: lighter;
-  font-size: 1.5rem;
-  background-color: whitesmoke; }
+  font-size: 1.0rem;
+  background-color: whitesmoke;
+  text-align: center; }
   .menu .navbar a {
-    flex: 0 1 auto;
-    padding: 1rem;
+    padding: 0.5rem;
     color: #3c3c3c; }
   .menu .navbar a:nth-child(1) {
-    border-bottom: solid 0.5rem #B9121B; }
+    border-bottom: solid 0.3rem #B9121B; }
   .menu .navbar a:nth-child(2) {
-    border-bottom: solid 0.5rem #3E6E1D; }
+    border-bottom: solid 0.3rem #3E6E1D; }
   .menu .navbar a:nth-child(3) {
-    border-bottom: solid 0.5rem #25064C; }
+    border-bottom: solid 0.3rem #25064C; }
   .menu .navbar a:nth-child(4) {
-    border-bottom: solid 0.5rem #702E17; }
+    border-bottom: solid 0.3rem #702E17; }
   .menu .navbar h1 {
-    flex: 1 1 auto;
     text-align: right;
     color: #3c3c3c;
-    margin-bottom: 2rem; }
+    margin: 1rem;
+    font-weight: 400; }
 
-.wrapper {
-  width: 1024px;
-  margin: 0 auto;
-  text-align: left; }
+.wrapper main {
+  display: flex;
+  flex-flow: column wrap; }
   .wrapper main .about {
     display: flex;
-    flex-flow: row wrap;
-    height: 20rem;
-    justify-content: center;
-    align-items: stretch; }
+    flex-flow: column nowrap;
+    justify-content: center; }
     .wrapper main .about section:nth-child(1) {
-      background: url(../img/imgAbout.jpg) repeat fixed center;
-      display: flex;
-      align-items: center; }
+      order: 2; }
+      .wrapper main .about section:nth-child(1) .imagen {
+        margin: 0;
+        padding: 0;
+        background: url(../img/imgAbout.jpg) repeat fixed center;
+        background-size: cover;
+        height: 100vh; }
     .wrapper main .about section:nth-child(2) {
-      background-color: #4C1B1B;
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: flex-start; }
+      background-color: #4C1B1B;
+      order: 3;
+      padding: 3rem;
+      text-align: center; }
     .wrapper main .about section:nth-child(3) {
-      background-color: #B9121B;
       display: flex;
-      align-items: center; }
+      flex-direction: column;
+      justify-content: center;
+      background-color: #B9121B;
+      order: 1; }
   .wrapper main .creation {
     display: flex;
-    flex-flow: row wrap;
-    height: 20rem;
+    flex-flow: column wrap;
     justify-content: center; }
     .wrapper main .creation h3 {
       color: #3E6E1D; }
@@ -216,9 +221,148 @@ span {
       justify-content: flex-end;
       align-items: center;
       background-color: #3E6E1D; }
-    .wrapper main .creation section:nth-child(2) {
-      background: url(../img/imgAbout1.jpg) repeat fixed center;
-      background-size: contain; }
+    .wrapper main .creation section:nth-child(2) .imagen {
+      background: url(../img/imgAbout.jpg) repeat fixed center;
+      background-size: cover;
+      height: 100vh; }
+    .wrapper main .creation section:nth-child(3) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-end;
+      background-color: whitesmoke;
+      color: #3c3c3c;
+      text-align: right;
+      padding: 3rem; }
+  .wrapper main .portfolio {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center; }
+    .wrapper main .portfolio section:nth-child(1) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      background-color: whitesmoke;
+      order: 2;
+      padding: 3rem;
+      text-align: center; }
+      .wrapper main .portfolio section:nth-child(1) h3 {
+        color: #25064C; }
+      .wrapper main .portfolio section:nth-child(1) p {
+        color: #3c3c3c; }
+      .wrapper main .portfolio section:nth-child(1) a {
+        font-size: 1.5rem;
+        color: #25064C; }
+    .wrapper main .portfolio section:nth-child(2) {
+      display: flex;
+      align-items: center;
+      background-color: #25064C;
+      color: whitesmoke;
+      order: 1; }
+  .wrapper main .contact {
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center; }
+    .wrapper main .contact section:nth-child(1) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      background-color: #702E17;
+      order: 2;
+      padding: 2rem;
+      text-align: center; }
+    .wrapper main .contact section:nth-child(2) {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      background-color: #481B15;
+      order: 1; }
+    .wrapper main .contact section:nth-child(3) {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+      background-color: #702E17;
+      order: 3;
+      padding: 2rem; }
+      .wrapper main .contact section:nth-child(3) small {
+        font-size: 0.8rem; }
+
+@media (min-width: 768px) {
+  .menu div:first-child {
+    text-align: right;
+    padding: 0rem; }
+    .menu div:first-child h1 {
+      padding: 1rem;
+      font-family: 'Pacifico', Courier New, Courier, monospace;
+      font-size: 3rem;
+      color: #B9121B; }
+  .menu .navbar {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-end;
+    padding: 0rem 1rem;
+    margin: 0rem;
+    font-weight: lighter;
+    font-size: 1.5rem;
+    background-color: whitesmoke; }
+    .menu .navbar a {
+      flex: 0 1 auto;
+      padding: 1rem;
+      color: #3c3c3c; }
+    .menu .navbar a:nth-child(1) {
+      border-bottom: solid 0.5rem #B9121B; }
+    .menu .navbar a:nth-child(2) {
+      border-bottom: solid 0.5rem #3E6E1D; }
+    .menu .navbar a:nth-child(3) {
+      border-bottom: solid 0.5rem #25064C; }
+    .menu .navbar a:nth-child(4) {
+      border-bottom: solid 0.5rem #702E17; }
+    .menu .navbar h1 {
+      flex: 1 1 auto;
+      text-align: right;
+      color: #3c3c3c;
+      margin: 2rem 0rem;
+      font-size: 1rem;
+      font-weight: 700; }
+
+  .wrapper main .about {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: stretch; }
+    .wrapper main .about section:nth-child(1) {
+      order: 1; }
+      .wrapper main .about section:nth-child(1) .imagen {
+        background: url(../img/imgAbout.jpg) repeat fixed right; }
+    .wrapper main .about section:nth-child(2) {
+      background-color: #4C1B1B;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      order: 2; }
+    .wrapper main .about section:nth-child(3) {
+      background-color: #B9121B;
+      display: flex;
+      align-items: center;
+      order: 3; }
+  .wrapper main .creation {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center; }
+    .wrapper main .creation h3 {
+      color: #3E6E1D; }
+    .wrapper main .creation section:nth-child(1) {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      background-color: #3E6E1D; }
+    .wrapper main .creation section:nth-child(2) .imagen {
+      background: url(../img/imgAbout1.jpg) repeat fixed center; }
     .wrapper main .creation section:nth-child(3) {
       display: flex;
       flex-direction: column;
@@ -239,7 +383,9 @@ span {
       flex-direction: column;
       justify-content: center;
       align-items: flex-start;
-      background-color: whitesmoke; }
+      background-color: whitesmoke;
+      order: 1;
+      text-align: left; }
       .wrapper main .portfolio section:nth-child(1) p {
         color: #3c3c3c; }
       .wrapper main .portfolio section:nth-child(1) a {
@@ -249,28 +395,36 @@ span {
       display: flex;
       align-items: center;
       background-color: #25064C;
-      color: whitesmoke; }
+      color: whitesmoke;
+      order: 2; }
   .wrapper main .contact {
     display: flex;
     flex-flow: row wrap;
-    height: 20rem;
     justify-content: center; }
     .wrapper main .contact section:nth-child(1) {
       display: flex;
       flex-direction: column;
       justify-content: center;
       align-items: flex-start;
-      background-color: #702E17; }
+      background-color: #702E17;
+      order: 1; }
     .wrapper main .contact section:nth-child(2) {
       display: flex;
       justify-content: center;
       align-items: center;
-      background-color: #481B15; }
+      background-color: #481B15;
+      order: 2; }
     .wrapper main .contact section:nth-child(3) {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      align-items: flex-end;
-      background-color: #702E17; }
+      align-items: center;
+      background-color: #702E17;
+      order: 3; }
+      .wrapper main .contact section:nth-child(3) small {
+        font-size: 0.8rem; } }
+@media (min-width: 992px) {
+  .wrapper main .about section:nth-child(1) .imagen {
+    background: url(../img/imgAbout.jpg) repeat fixed left; } }
 
 /*# sourceMappingURL=estilos.css.map */
