--- a/sass/estilos.scss
+++ b/sass/estilos.scss
@@ -270,7 +270,7 @@
                 }
                 section:nth-child(2) {
                     .imagen {
-                        background: url(../img/imgAbout.jpg) repeat fixed center;
+                        background: url(../img/imgAbout1.jpg) repeat fixed center;
                         background-size: cover;
                         height: 100vh;
                     }
